--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -4,10 +4,11 @@
   height: 50px;
   //background-color: $background-grey-dark-light;
   display: flex;
+  position: relative;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-  position: relative;
+  //position: fixed;
   z-index: 1;
 
   &__left {
